<resources>
    <string name="app_name">TouchFaders</string>
    <string name="hint_ip">192.168.1.2</string>
    <string name="start">CONNECT</string>
    <string name="demo_button">DEMO</string>
    <string name="reset_layout_button">RESET CUSTOM FADER LAYOUT</string>
    <string-array name="colours_array">
        <item>Blue</item>
        <item>Orange</item>
        <item>Gold</item>
        <item>Purple</item>
        <item>Cyan</item>
        <item>Pink</item>
        <item>Brown</item>
        <item>Green</item>
    </string-array>
    <string name="help_eye">Use the eye to hide channels that are turned all the way down (set to -Inf).</string>
    <string name="help_meter">This meter will show the current output volume.</string>
    <string name="help_group">Use this button to add groups.</string>
    <string name="help_fader">Use the fader to adjust the volume of that channel.</string>
    <string name="help_touch">Double-tap to (un)mute, touch and hold to change order.</string>
    <string name="help_channel">All the information for a channel is displayed here.</string>
    <string name="help_exit">Use the red button to go back.</string>
    <string name="help_mix_name">The name of the current mix is displayed here.</string>
    <string name="help_mix_number">The number of the current mix is displayed here.</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
</resources>