<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startupLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.TouchFaders.FullscreenContainer">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/helpButton"
        android:text="@string/help"
        android:textSize="0sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        app:icon="@android:drawable/ic_menu_help"
        app:iconSize="0dp"
        app:iconPadding="0dp"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toTopOf="@+id/gradientLine"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/demoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_button"
        android:textSize="25sp"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/helpButton"/>

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/app_name"
        android:adjustViewBounds="true"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/gradientLine"
        app:layout_constraintEnd_toStartOf="@id/titleText"/>

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gradientLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:text="@string/settings"
        android:textSize="0sp"
        app:icon="@android:drawable/ic_menu_preferences"
        app:iconSize="0dp"
        app:iconPadding="0dp"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toTopOf="@+id/gradientLine"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/gradientLine"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@drawable/rectangle_sep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/demoButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/deviceRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gradientLine"
        tools:itemCount="3"
        tools:listitem="@layout/recyclerview_device_selection" />

</androidx.constraintlayout.widget.ConstraintLayout>